# xapian-bindings

./: .gitignore  pyproject.toml  requirements.txt
